# utilsC

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  colors.h  logs.txt  main.txt  runtest.sh  runtests.sh  universal.code-profile
Debug/: dump.h  errors_codegen.h  errors_list.gen  log.cpp  log.h  myassert.h
Terminal/: README_TERMINAL.md  kitty-quake.conf  kitty-quake.sh  kitty.conf
